[gd_scene load_steps=13 format=3 uid="uid://bfv4vemmcuhou"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_herpq"]
[ext_resource type="Script" path="res://modules/state_machine.gd" id="2_147ld"]
[ext_resource type="Texture2D" uid="uid://di4um16104k20" path="res://sprites/player/6583.png" id="2_b2dp8"]
[ext_resource type="Script" path="res://scripts/action_handler.gd" id="4_1nlkt"]

[sub_resource type="Animation" id="Animation_x8te7"]
resource_name = "ball"
length = 0.15
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(644, 164, 30, 40), Rect2(684, 164, 30, 40), Rect2(724, 164, 30, 40), Rect2(764, 164, 30, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8mkiu"]
resource_name = "ball_large"
length = 0.15
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(750, 710, 50, 50), Rect2(822, 710, 50, 50), Rect2(894, 710, 50, 50), Rect2(966, 710, 50, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-5, -3)]
}

[sub_resource type="Animation" id="Animation_k8vgq"]
resource_name = "hard_stop"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(824, 225, 40, 50), Rect2(865, 225, 40, 50), Rect2(913, 225, 40, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, -7), Vector2(-6, -7), Vector2(-6, -7)]
}

[sub_resource type="Animation" id="Animation_bybfm"]
resource_name = "idle"
length = 0.88
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33, 0.44, 0.55, 0.66, 0.77),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(18, 31, 23, 33), Rect2(59, 31, 24, 33), Rect2(98, 31, 26, 33), Rect2(137, 31, 26, 33), Rect2(176, 31, 26, 33), Rect2(216, 31, 26, 33), Rect2(256, 31, 26, 33), Rect2(296, 31, 26, 33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33, 0.44),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(0, 0), Vector2(-1, 0), Vector2(-2, 0)]
}

[sub_resource type="Animation" id="Animation_g0txn"]
resource_name = "run"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(485, 225, 40, 40), Rect2(541, 225, 40, 40), Rect2(597, 225, 40, 40), Rect2(654, 225, 40, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-5, -7)]
}

[sub_resource type="Animation" id="Animation_fddng"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(24, 227, 30, 40), Rect2(80, 227, 35, 40), Rect2(135, 227, 35, 40), Rect2(192, 227, 35, 40), Rect2(248, 227, 35, 40), Rect2(304, 227, 35, 40), Rect2(355, 227, 35, 40), Rect2(415, 227, 35, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-2, -5), Vector2(-4, -4), Vector2(-2, -4), Vector2(-2, -5), Vector2(-7, -5), Vector2(-3, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lj7up"]
_data = {
"ball": SubResource("Animation_x8te7"),
"ball_large": SubResource("Animation_8mkiu"),
"hard_stop": SubResource("Animation_k8vgq"),
"idle": SubResource("Animation_bybfm"),
"run": SubResource("Animation_g0txn"),
"walk": SubResource("Animation_fddng")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsm25"]
size = Vector2(20, 28)

[node name="Player" type="Node2D"]
script = ExtResource("1_herpq")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
floor_max_angle = 1.56905
floor_snap_length = 0.0

[node name="SpriteCenter" type="Node2D" parent="CharacterBody2D"]

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/SpriteCenter"]
position = Vector2(-12, -32)
texture = ExtResource("2_b2dp8")
centered = false
region_enabled = true
region_rect = Rect2(18, 31, 23, 33)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D/SpriteCenter/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_lj7up")
}

[node name="ForwardOrigin" type="Node2D" parent="CharacterBody2D/SpriteCenter"]
position = Vector2(0, -14)

[node name="Forward" type="Node2D" parent="CharacterBody2D/SpriteCenter"]
position = Vector2(1, -14)

[node name="Raycasts" type="Node2D" parent="CharacterBody2D"]
position = Vector2(0, -14)

[node name="LeftDown" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
position = Vector2(-10, 0)
target_position = Vector2(0, 16)
collision_mask = 2

[node name="LeftDownSnap" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
position = Vector2(-10, 0)
target_position = Vector2(0, 38)
collision_mask = 2

[node name="RightDown" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
position = Vector2(10, 0)
target_position = Vector2(0, 16)
collision_mask = 2

[node name="RightDownSnap" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
position = Vector2(10, 0)
target_position = Vector2(0, 38)
collision_mask = 2

[node name="RightWall" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
target_position = Vector2(11, 0)
collision_mask = 2

[node name="LeftWall" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
target_position = Vector2(-11, 0)
collision_mask = 2

[node name="LeftCeiling" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
position = Vector2(-10, 0)
target_position = Vector2(0, -15)
collision_mask = 2

[node name="RightCeiling" type="RayCast2D" parent="CharacterBody2D/Raycasts"]
modulate = Color(0.317647, 0.0823529, 0.890196, 1)
position = Vector2(10, 0)
target_position = Vector2(0, -15)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_lsm25")

[node name="SpriteSnapCenter" type="Node2D" parent="CharacterBody2D/CollisionShape2D"]
position = Vector2(0, 14)

[node name="SpriteSnapRight" type="Node2D" parent="CharacterBody2D/CollisionShape2D"]
position = Vector2(10, 14)

[node name="SpriteSnapLeft" type="Node2D" parent="CharacterBody2D/CollisionShape2D"]
position = Vector2(-10, 14)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_147ld")

[node name="ActionStateMachine" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "sprite")]
script = ExtResource("4_1nlkt")
player = NodePath("../../CharacterBody2D")
sprite = NodePath("../../CharacterBody2D/SpriteCenter")

[connection signal="wall_hit" from="StateMachine/ActionStateMachine" to="StateMachine/ActionStateMachine" method="_on_wall_hit"]
